Major simplifying of the code v1.2

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-.vscode/settings.json
+.vscode/*
+.snapshots/*
+Images/*
+kinter_interface/*
+tombolavideo/*
+Tests/*
+*.test.py
+dist/*
+build/*
 __pycache__/citanje.cpython-310.pyc
 __pycache__/drafting.cpython-310.pyc
 __pycache__/drafting.cpython-311.pyc
@@ -6,201 +14,5 @@ __pycache__/izvlacenje.cpython-310.pyc
 __pycache__/provera.cpython-310.pyc
 __pycache__/tiket.cpython-310.pyc
 __pycache__/tiket.cpython-311.pyc
-build/main/Analysis-00.toc
-build/main/base_library.zip
-build/main/EXE-00.toc
-build/main/main.exe.manifest
-build/main/main.pkg
-build/main/PKG-00.toc
-build/main/PYZ-00.pyz
-build/main/PYZ-00.toc
-build/main/Tree-00.toc
-build/main/Tree-01.toc
-build/main/Tree-02.toc
-build/main/warn-main.txt
-build/main/xref-main.html
-build/main/localpycs/pyimod01_archive.pyc
-build/main/localpycs/pyimod02_importers.pyc
-build/main/localpycs/pyimod03_ctypes.pyc
-build/main/localpycs/pyimod04_pywin32.pyc
-build/main/localpycs/struct.pyc
-build/running_game/Analysis-00.toc
-build/running_game/base_library.zip
-build/running_game/EXE-00.toc
-build/running_game/PKG-00.toc
-build/running_game/PYZ-00.pyz
-build/running_game/PYZ-00.toc
-build/running_game/running_game.exe.manifest
-build/running_game/running_game.pkg
-build/running_game/Tree-00.toc
-build/running_game/Tree-01.toc
-build/running_game/Tree-02.toc
-build/running_game/warn-running_game.txt
-build/running_game/xref-running_game.html
-build/running_game/localpycs/pyimod01_archive.pyc
-build/running_game/localpycs/pyimod02_importers.pyc
-build/running_game/localpycs/pyimod03_ctypes.pyc
-build/running_game/localpycs/pyimod04_pywin32.pyc
-build/running_game/localpycs/struct.pyc
-dist/game.db
-dist/main.exe
-dist/running_game.exe
-dist/Images/image1_little.png
-dist/Images/image1.png
-dist/Images/image2_little.png
-dist/Images/image2.png
-dist/Images/image3_little.png
-dist/Images/image3.png
-dist/Images/image4_little.png
-dist/Images/image4.png
-dist/Images/image5_little.png
-dist/Images/image5.png
-dist/Images/image6_little.png
-dist/Images/image6.png
-dist/Images/image7_little.png
-dist/Images/image7.png
-dist/Images/image8_little.png
-dist/Images/image8.png
-dist/Images/image9_little.png
-dist/Images/image9.png
-dist/Images/image10_little.png
-dist/Images/image10.png
-dist/Images/image11_little.png
-dist/Images/image11.png
-dist/Images/image12_little.png
-dist/Images/image12.png
-dist/Images/image13_little.png
-dist/Images/image13.png
-dist/Images/image14_little.png
-dist/Images/image14.png
-dist/Images/image15_little.png
-dist/Images/image15.png
-dist/Images/image16_little.png
-dist/Images/image16.png
-dist/Images/image17_little.png
-dist/Images/image17.png
-dist/Images/image18_little.png
-dist/Images/image18.png
-dist/Images/image19_little.png
-dist/Images/image19.png
-dist/Images/image20_little.png
-dist/Images/image20.png
-dist/Images/image21_little.png
-dist/Images/image21.png
-dist/Images/image22_little.png
-dist/Images/image22.png
-dist/Images/image23_little.png
-dist/Images/image23.png
-dist/Images/image24_little.png
-dist/Images/image24.png
-dist/Images/image25_little.png
-dist/Images/image25.png
-dist/Images/image26_little.png
-dist/Images/image26.png
-dist/Images/image27_little.png
-dist/Images/image27.png
-dist/Images/image28_little.png
-dist/Images/image28.png
-dist/Images/image29_little.png
-dist/Images/image29.png
-dist/Images/image30_little.png
-dist/Images/image30.png
-dist/Images/image31_little.png
-dist/Images/image31.png
-dist/Images/image32_little.png
-dist/Images/image32.png
-dist/Images/image33_little.png
-dist/Images/image33.png
-dist/Images/image34_little.png
-dist/Images/image34.png
-dist/Images/image35_little.png
-dist/Images/image35.png
-dist/Images/image36_little.png
-dist/Images/image36.png
-dist/Images/image37_little.png
-dist/Images/image37.png
-dist/Images/image38_little.png
-dist/Images/image38.png
-dist/Images/image39_little.png
-dist/Images/image39.png
-dist/Images/image40_little.png
-dist/Images/image40.png
-dist/Images/image41_little.png
-dist/Images/image41.png
-dist/Images/image42_little.png
-dist/Images/image42.png
-dist/Images/image43_little.png
-dist/Images/image43.png
-dist/Images/image44_little.png
-dist/Images/image44.png
-dist/Images/image45_little.png
-dist/Images/image45.png
-dist/Images/image46_little.png
-dist/Images/image46.png
-dist/Images/image47_little.png
-dist/Images/image47.png
-dist/Images/image48_little.png
-dist/Images/image48.png
-tombolavideo/1.mp4
-tombolavideo/2.mp4
-tombolavideo/3.mp4
-tombolavideo/4.mp4
-tombolavideo/5.mp4
-tombolavideo/6.mp4
-tombolavideo/7.mp4
-tombolavideo/8.mp4
-tombolavideo/9.mp4
-tombolavideo/broj1.mp4
-tombolavideo/broj2.mp4
-tombolavideo/broj3.mp4
-tombolavideo/broj4.mp4
-tombolavideo/broj5.mp4
-tombolavideo/broj6.mp4
-tombolavideo/broj7.mp4
-tombolavideo/broj8.mp4
-tombolavideo/broj9.mp4
-tombolavideo/broj10.mp4
-tombolavideo/broj11.mp4
-tombolavideo/broj12.mp4
-tombolavideo/broj13.mp4
-tombolavideo/broj14.mp4
-tombolavideo/broj15.mp4
-tombolavideo/broj16.mp4
-tombolavideo/broj17.mp4
-tombolavideo/broj18.mp4
-tombolavideo/broj19.mp4
-tombolavideo/broj20.mp4
-tombolavideo/broj21.mp4
-tombolavideo/broj22.mp4
-tombolavideo/broj23.mp4
-tombolavideo/broj24.mp4
-tombolavideo/broj25.mp4
-tombolavideo/broj26.mp4
-tombolavideo/broj27.mp4
-tombolavideo/broj28.mp4
-tombolavideo/broj29.mp4
-tombolavideo/broj30.mp4
-tombolavideo/broj31.mp4
-tombolavideo/broj32.mp4
-tombolavideo/broj33.mp4
-tombolavideo/broj34.mp4
-tombolavideo/broj35.mp4
-tombolavideo/broj36.mp4
-tombolavideo/broj37.mp4
-tombolavideo/broj38.mp4
-tombolavideo/broj39.mp4
-tombolavideo/broj40.mp4
-tombolavideo/broj41.mp4
-tombolavideo/broj42.mp4
-tombolavideo/broj43.mp4
-tombolavideo/broj44.mp4
-tombolavideo/broj45.mp4
-tombolavideo/broj46.mp4
-tombolavideo/broj47.mp4
-tombolavideo/broj48.mp4
-tombolavideo/broj49.mp4
-tombolavideo/maketombolavideo.py
-tombolavideo/tombolabrojke.py
-tombolavideo/video0.mp4
 kinter_interface/icon.png
 kinter_interface/test.py
